--- a/research.html
+++ b/research.html
@@ -166,18 +166,18 @@
 
                     <h3 style="text-align: left;">2021</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
-                            <canvas class="pdf-canvas" width="100" height="100"></canvas>
+                        <li class="bullet-point" data-pdf-filename="data/2021_NeuralSSR.pdf">
+                            <a href="data/2021_NeuralSSR.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text">C. Suppan, <b>A. Chalmers</b>, J. Zhao, A. Doronin, T. Rhee. <quotestyle>"Neural Screen Space Rendering of Direct Illumination"</quotestyle>, Pacific Graphics, 2021 (best conference paper award).</li>
-                        <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
-                            <canvas class="pdf-canvas" width="100" height="100"></canvas>
+                        <li class="bullet-point" data-pdf-filename="data/2021_EMLatentSpace.pdf">
+                            <a href="data/2021_EMLatentSpace.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text">L. Petikam, <b>A. Chalmers</b>, K. Anjyo, T. Rhee. <quotestyle>"Art-directing Appearance using an Environment Map Latent Space"</quotestyle>, Pacific Graphics, 2021.</li>
                         <li class="bullet-point" data-pdf-filename="data/2021_LightEstimation-compressed.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="35">
-                            <canvas class="pdf-canvas" width="100" height="100"></canvas>
+                            <a href="data/2021_LightEstimation-compressed.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text">J. Zhao, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Adaptive Light Estimation using Dynamic Filtering for Diverse Lighting Conditions"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2021 <a href="data/2021_LightEstimation.pdf" target="_blank">[pdf]</a>.</li>
-                        <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
-                            <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text">F. Welsford-Ackroyd, <b>A. Chalmers</b>, R. dos Anjos, D. Medeiros, H. Kim, T. Rhee, <quotestyle>"Spectator View: Enabling Asymmetric Interaction between HMD Wearers and Spectators with a Large Display"</quotestyle>, ACM Interactive Surfaces and Spaces Conference (ISS), Proceedings of the ACM on Human-Computer Interaction (PACMHCI), 2021.</li>
+                        <li class="bullet-point" data-pdf-filename="data/2021_SpectatorView.pdf">
+                            <a href="data/2021_SpectatorView.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
+                            <div class="bullet-point-text">F. Welsford-Ackroyd, <b>A. Chalmers</b>, R. dos Anjos, D. Medeiros, H. Kim, T. Rhee, <quotestyle>"Spectator View: Enabling Asymmetric Interaction between HMD Wearers and Spectators with a Large Display"</quotestyle>, ACM Interactive Surfaces and Spaces Conference (ISS), Proceedings of the ACM on Human-Computer Interaction (PACMHCI), 2021 [<a href="https://www.youtube.com/watch?v=hmOa0vGOnYE&ab_channel=ACMSIGCHI" target="_blank">youtube</a>].</li>
                     </ul>
 
                     <h3 style="text-align: left;">2020</h3>
