--- a/research.html
+++ b/research.html
@@ -212,7 +212,7 @@
                         </li>
                         <li class="bullet-point" data-pdf-filename="data/2019_CausticsPoster.pdf">
                             <a href="data/2019_CausticsPosterPaper.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
-                            <div class="bullet-point-text">S. Thompson, <b>A. Chalmers</b>, T. Rhee, <quotestyle>“Real-time Underwater Caustics for Mixed Reality 360° Videos”</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), Poster, 2019.</div>
+                            <div class="bullet-point-text">S. Thompson, <b>A. Chalmers</b>, T. Rhee, <quotestyle>“Real-time Underwater Caustics for Mixed Reality 360° Videos”</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), Poster, 2019 [<a href="data/2019_CausticsPoster.pdf" target="_blank">poster</a>].</div>
                         </li>
                     </ul>
 
