--- a/research.html
+++ b/research.html
@@ -119,11 +119,11 @@
 
                 <h3 style="text-align: left;">2023</h3>
                     <ul class="bullet-list">
-                    <li class="bullet-point" data-pdf-filename="data/2023_SA-RTL_AuditoriumModelling.pdf">
+                    <li class="bullet-point" data-pdf-filename="data/2023_SA-RTL_AuditoriumModelling.pdf" data-pdf-Off-Set-Y="30">
                             <a href="data/2023_SA-RTL_AuditoriumModelling.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, F. Zaman, A. Stangnes, S. Finnie, H. S. Nguyen, J. Han, and T. Rhee, <quotestyle><a href="https://dl.acm.org/doi/10.1145/3610539.3630250" target="_blank">"Real-time Auditorium Modeling and Visual Effects for Live Performances"</a></quotestyle>, ACM SIGGRAPH Asia 2023 Real-Time Live!, 2023 [<a href="https://asia.siggraph.org/2023/presentation/?id=real_110&sess=sess210" target="_blank">event page</a>] [youtube].</li>
 
-                    <li class="bullet-point" data-pdf-filename="data/2023_SimPlatform.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="5">
+                    <li class="bullet-point" data-pdf-filename="data/2023_SimPlatform.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="30">
                             <a href="data/2023_SimPlatform.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, Junhong Zhao, Weng Khuan Hoh, James Drown, Simon Finnie, Richard Yao, James Lin, James Wilmott, Arindam Dey, Mark Billinghurst, and T. Rhee, <quotestyle>"A Motion-Simulation Platform to Generate Synthetic Motion Data for Computer Vision Tasks"</quotestyle>, SIGGRAPH Asia Technical Communications, 2023.</li>
 
@@ -166,7 +166,7 @@
 
                     <h3 style="text-align: left;">2021</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/2021_NeuralSSR.pdf" data-pdf-page="2">
+                        <li class="bullet-point" data-pdf-filename="data/2021_NeuralSSR.pdf" data-pdf-page="2" data-pdf-Off-Set-Y="30">
                             <a href="data/2021_NeuralSSR.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text">C. Suppan, <b>A. Chalmers</b>, J. Zhao, A. Doronin, T. Rhee. <quotestyle>"Neural Screen Space Rendering of Direct Illumination"</quotestyle>, Pacific Graphics, 2021 (best conference paper award).</li>
                         <li class="bullet-point" data-pdf-filename="data/2021_EMLatentSpace.pdf" data-pdf-Off-Set-Y="30">
@@ -175,14 +175,14 @@
                         <li class="bullet-point" data-pdf-filename="data/2021_LightEstimation-compressed.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="35">
                             <a href="data/2021_LightEstimation-compressed.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text">J. Zhao, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Adaptive Light Estimation using Dynamic Filtering for Diverse Lighting Conditions"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2021 <a href="data/2021_LightEstimation.pdf" target="_blank">[pdf]</a>.</li>
-                        <li class="bullet-point" data-pdf-filename="data/2021_SpectatorView.pdf" data-pdf-Off-Set-Y="30">
+                        <li class="bullet-point" data-pdf-filename="data/2021_SpectatorView.pdf" data-pdf-Off-Set-Y="25">
                             <a href="data/2021_SpectatorView.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text">F. Welsford-Ackroyd, <b>A. Chalmers</b>, R. dos Anjos, D. Medeiros, H. Kim, T. Rhee, <quotestyle>"Spectator View: Enabling Asymmetric Interaction between HMD Wearers and Spectators with a Large Display"</quotestyle>, ACM Interactive Surfaces and Spaces Conference (ISS), Proceedings of the ACM on Human-Computer Interaction (PACMHCI), 2021 [<a href="https://www.youtube.com/watch?v=hmOa0vGOnYE&ab_channel=ACMSIGCHI" target="_blank">youtube</a>].</li>
                     </ul>
 
                     <h3 style="text-align: left;">2020</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/2020_ShadowLightDetection.pdf" data-pdf-page="3">
+                        <li class="bullet-point" data-pdf-filename="data/2020_ShadowLightDetection.pdf" data-pdf-page="3" data-pdf-Off-Set-Y="25">
                             <a href="data/2020_ShadowLightDetection.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text"><b>A. Chalmers</b> and T. Rhee, <quotestyle>"Shadow-based Light Detection for HDR Environment Maps"</quotestyle>, International Conference on Image and Vision Computing New Zealand (IVCNZ), 2020.</li>
                         <li class="bullet-point" data-pdf-filename="data/2020_ReflectionMapEstimation-compressed.pdf" data-pdf-page="2" data-pdf-Off-Set-Y="40">
@@ -194,7 +194,7 @@
                         <li class="bullet-point" data-pdf-filename="data/2020_SpectatorViewPosterPaper.pdf">
                             <a href="data/2020_SpectatorViewPosterPaper.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text">F. Welsford-Ackroyd, <b>A. Chalmers</b>, R. dos Anjos, D. Medeiros, H. Kim, T. Rhee, <quotestyle>"Asymmetric Interaction between HMD Wearers and Spectators with a Large Display"</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), Poster, 2020.</li>
-                        <li class="bullet-point" data-pdf-filename="data/2020_AVT.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2020_AVT.pdf" data-pdf-Off-Set-Y="30">
                             <a href="data/2020_SpectatorViewPosterPaper.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text">T. Rhee, S. Thompson, D. Medeiros, R. dos Anjos, <b>A. Chalmers</b>, <quotestyle>"Augmented Virtual Teleportation for High-Fidelity Telecollaboration"</quotestyle>, IEEE Virtual Reality and 3D User Interfaces (IEEE VR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020.</li>
                     </ul>
@@ -202,15 +202,15 @@
 
                     <h3 style="text-align: left;">2019</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/2019_Underwater360Video.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2019_Underwater360Video.pdf" data-pdf-Off-Set-Y="30">
                             <a href="data/2019_Underwater360Video.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text">S. Thompson, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Real-Time Mixed Reality Rendering for Underwater 360° Videos"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2019.</div>
                         </li>
-                        <li class="bullet-point" data-pdf-filename="data/2019_Underwater360VideoToolkit.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2019_Underwater360VideoToolkit.pdf" data-pdf-page="2" data-pdf-Off-Set-Y="30">
                             <a href="data/2019_Underwater360VideoToolkit.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text">S. Thompson, <b>A. Chalmers</b>, D. Medeiros, T. Rhee, <quotestyle>"Underwater Toolkit: Mixed Reality Object Blending for 360° Videos"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), Demo, 2019.</div>
                         </li>
-                        <li class="bullet-point" data-pdf-filename="data/2019_CausticsPoster.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2019_CausticsPoster.pdf" data-pdf-Off-Set-Y="30">
                             <a href="data/2019_CausticsPosterPaper.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text">S. Thompson, <b>A. Chalmers</b>, T. Rhee, <quotestyle>“Real-time Underwater Caustics for Mixed Reality 360° Videos”</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), Poster, 2019 [<a href="data/2019_CausticsPoster.pdf" target="_blank">poster</a>].</div>
                         </li>
