--- a/research.html
+++ b/research.html
@@ -119,6 +119,17 @@
 
                 <h3 style="text-align: left;">2023</h3>
                     <ul class="bullet-list">
+                    <li class="bullet-point" data-pdf-filename="data/2024_6DoF.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="30">
+                            <a href="data/2024_6DoF.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
+                            <div class="bullet-point-text">R. Chen, J. Zhao, F. Zhang,  <b>A. Chalmers</b>, and T. Rhee, <quotestyle>"Neural Radiance Fields for Dynamic View Synthesis using Local Temporal Priors"</quotestyle>, International Conference on Computational Visual Media (CVM), 2024.</li>
+
+                    <li class="bullet-point" data-pdf-filename="data/2024_Avatar360.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="30">
+                            <a href="data/2024_Avatar360.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
+                            <div class="bullet-point-text"><b>A. Chalmers</b>, F. Zaman, and T. Rhee, <quotestyle>"Avatar360: Emulating 6-DoF Perception in 360° Panoramas through Avatar-Assisted Navigation"</quotestyle>, IEEE Virtual Reality and 3D User Interfaces (IEEE VR), 2024.</li>
+                    </ul>
+
+                <h3 style="text-align: left;">2023</h3>
+                    <ul class="bullet-list">
                     <li class="bullet-point" data-pdf-filename="data/2023_SA-RTL_AuditoriumModelling.pdf" data-pdf-Off-Set-Y="30">
                             <a href="data/2023_SA-RTL_AuditoriumModelling.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, F. Zaman, A. Stangnes, S. Finnie, H. S. Nguyen, J. Han, and T. Rhee, <quotestyle><a href="https://dl.acm.org/doi/10.1145/3610539.3630250" target="_blank">"Real-time Auditorium Modeling and Visual Effects for Live Performances"</a></quotestyle>, ACM SIGGRAPH Asia 2023 Real-Time Live!, 2023 [<a href="https://asia.siggraph.org/2023/presentation/?id=real_110&sess=sess210" target="_blank">event page</a>] [<a href="https://www.youtube.com/watch?v=lcLjtdlc-7k" target="_blank">youtube</a>].</li>
