--- a/research.html
+++ b/research.html
@@ -117,14 +117,14 @@
                 <img src="images/research-banner.png" alt="Research Banner" style="width: 100%;">
                 <h2>Publications</h2>
 
-                <h3 style="text-align: left;">2023</h3>
+                <h3 style="text-align: left;">2024</h3>
                     <ul class="bullet-list">
-                    <li class="bullet-point" data-pdf-filename="data/2024_6DoF.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="30">
-                            <a href="data/2024_6DoF.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
+                    <li class="bullet-point" data-pdf-filename="data/2024_6DoF-compressed.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="30">
+                            <a href="data/2024_6DoF-compressed.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text">R. Chen, J. Zhao, F. Zhang,  <b>A. Chalmers</b>, and T. Rhee, <quotestyle>"Neural Radiance Fields for Dynamic View Synthesis using Local Temporal Priors"</quotestyle>, International Conference on Computational Visual Media (CVM), 2024.</li>
 
-                    <li class="bullet-point" data-pdf-filename="data/2024_Avatar360.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="30">
-                            <a href="data/2024_Avatar360.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
+                    <li class="bullet-point" data-pdf-filename="data/2024_Avatar360-compressed.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="30">
+                            <a href="data/2024_Avatar360-compressed.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, F. Zaman, and T. Rhee, <quotestyle>"Avatar360: Emulating 6-DoF Perception in 360° Panoramas through Avatar-Assisted Navigation"</quotestyle>, IEEE Virtual Reality and 3D User Interfaces (IEEE VR), 2024.</li>
                     </ul>
 
