--- a/research.html
+++ b/research.html
@@ -290,6 +290,7 @@
                 <paper_authors><b>Chalmers, Andrew</b> and Zickler, Todd and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>Computers & Graphics, 2022</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/chalmers2022illumination.pdf', '_blank')">PDF 3MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chalmers2022illumination-compressed.pdf', '_blank')">PDF 2MB</button>
+                <button class="button-video" onclick="window.open('https://www.youtube.com/watch?v=ITHvP2uv1cE&ab_channel=AndrewChalmers', '_blank')">Video</button>
             </div>
           </li>
           <li>
@@ -360,6 +361,7 @@
                 <paper_authors>Welsford-Ackroyd, Finn and <b>Chalmers, Andrew</b> and Kuffner dos Anjos, Rafael and Medeiros, Daniel and Kim, Hyejin and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>Proceedings Of the ACM on Human-computer Interaction, 2021</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/welsford2021spectator.pdf', '_blank')">PDF 6MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/welsford2021spectator-compressed.pdf', '_blank')">PDF 2MB</button>
+                <button class="button-video" onclick="window.open('https://www.youtube.com/watch?v=hmOa0vGOnYE&ab_channel=ACMSIGCHI', '_blank')">Video</button>
             </div>
           </li>
         </ul>
@@ -407,6 +409,7 @@
                 <paper_authors><b>Chalmers, Andrew</b> and Zickler, Todd and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>Pacific Graphics Short Papers, Posters, and Work-in-progress Papers, 2020</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/chalmers2020illumination.pdf', '_blank')">PDF 10MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chalmers2020illumination-compressed.pdf', '_blank')">PDF 2MB</button>
+                <button class="button-video" onclick="window.open('https://www.youtube.com/watch?v=ITHvP2uv1cE&ab_channel=AndrewChalmers', '_blank')">Video</button>
             </div>
           </li>
         </ul>
@@ -485,6 +488,7 @@
                 <paper_authors><b>Chalmers, Andrew</b></paper_authors><br>
                 <paper_publisher>Phd Thesis, 2018</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/chalmers2018illumination.pdf', '_blank')">PDF 79MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chalmers2018illumination-compressed.pdf', '_blank')">PDF 15MB</button>
+                <button class="button-video" onclick="window.open('https://www.youtube.com/watch?v=ITHvP2uv1cE&ab_channel=AndrewChalmers', '_blank')">Video</button>
             </div>
           </li>
         </ul>
