--- a/research.html
+++ b/research.html
@@ -205,7 +205,7 @@
                 <paper_title>Neural Radiance Fields for Dynamic View Synthesis using Local Temporal Priors</paper_title><br>
                 <paper_authors>Chen, Rongsen and Zhao, Junhong and Zhang, Fang-Lue and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>International Conference on Computational Visual Media, 2024</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/chen2024neural.pdf', '_blank')">PDF 43MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chen2024neural-compressed.pdf', '_blank')">PDF 4MB</button>
+                <button class="button-main" onclick="window.open('./papers/chen2024neural.pdf', '_blank')">PDF 43MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chen2024neural-compressed.pdf', '_blank')">PDF 5MB</button>
             </div>
           </li>
         </ul>
@@ -267,7 +267,8 @@
                 <paper_title>Simulating the Geometric Growth of the Marine Sponge Crella Incrustans</paper_title><br>
                 <paper_authors>O’Hagan, Joshua and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>IEEE Visualization and Visual Analytics, 2023</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/o2023simulating.pdf', '_blank')">PDF 9MB</button>                <button class="button-main" onclick="window.open('./papers/o2023simulating-appendix.pdf', '_blank')">Appendix 9MB</button>
+                <button class="button-main" onclick="window.open('./papers/o2023simulating.pdf', '_blank')">PDF 9MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/o2023simulating-compressed.pdf', '_blank')">PDF 2MB</button>
+                <button class="button-main" onclick="window.open('./papers/o2023simulating-appendix.pdf', '_blank')">Appendix 9MB</button>
             </div>
           </li>
           <li>
@@ -276,7 +277,7 @@
                 <paper_title>De-Lighting Human Images using Region-Specific Data Augmentation</paper_title><br>
                 <paper_authors>Weir, Joshua and Zhao, Junhong and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>38th International Conference on Image and Vision Computing New Zealand, 2023</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/weir2023lighting.pdf', '_blank')">PDF 15MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/weir2023lighting-compressed.pdf', '_blank')">PDF 2MB</button>
+                <button class="button-main" onclick="window.open('./papers/weir2023lighting.pdf', '_blank')">PDF 15MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/weir2023lighting-compressed.pdf', '_blank')">PDF 3MB</button>
             </div>
           </li>
         </ul>
@@ -299,7 +300,7 @@
                 <paper_title>Casual 6-Dof: Free-Viewpoint Panorama using a Handheld 360 Camera</paper_title><br>
                 <paper_authors>Chen, Rongsen and Zhang, Fang-Lue and Finnie, Simon and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>IEEE Transactions on Visualization and Computer Graphics, 2022</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/chen2022casual.pdf', '_blank')">PDF 11MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chen2022casual-compressed.pdf', '_blank')">PDF 4MB</button>
+                <button class="button-main" onclick="window.open('./papers/chen2022casual.pdf', '_blank')">PDF 11MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chen2022casual-compressed.pdf', '_blank')">PDF 5MB</button>
             </div>
           </li>
           <li>
@@ -351,7 +352,7 @@
                 <paper_title>Adaptive Light Estimation using Dynamic Filtering for Diverse Lighting Conditions</paper_title><br>
                 <paper_authors>Zhao, Junhong and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>IEEE Transactions on Visualization and Computer Graphics, 2021</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/zhao2021adaptive.pdf', '_blank')">PDF 8MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/zhao2021adaptive-compressed.pdf', '_blank')">PDF 3MB</button>
+                <button class="button-main" onclick="window.open('./papers/zhao2021adaptive.pdf', '_blank')">PDF 8MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/zhao2021adaptive-compressed.pdf', '_blank')">PDF 4MB</button>
             </div>
           </li>
           <li>
@@ -408,7 +409,7 @@
                 <paper_title>Illumination Space: A Feature Space for Radiance Maps</paper_title><br>
                 <paper_authors><b>Chalmers, Andrew</b> and Zickler, Todd and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>Pacific Graphics Short Papers, Posters, and Work-In-Progress Papers, 2020</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/chalmers2020illumination.pdf', '_blank')">PDF 10MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chalmers2020illumination-compressed.pdf', '_blank')">PDF 2MB</button>
+                <button class="button-main" onclick="window.open('./papers/chalmers2020illumination.pdf', '_blank')">PDF 10MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chalmers2020illumination-compressed.pdf', '_blank')">PDF 3MB</button>
                 <button class="button-video" onclick="window.open('https://www.youtube.com/watch?v=ITHvP2uv1cE&ab_channel=AndrewChalmers', '_blank')">Video</button>
             </div>
           </li>
@@ -431,7 +432,7 @@
                 <paper_title>Real-Time Mixed Reality Rendering for Underwater 360 Videos</paper_title><br>
                 <paper_authors>Thompson, Stephen and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>IEEE International Symposium on Mixed and Augmented Reality, 2019</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/thompson2019real.pdf', '_blank')">PDF 7MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/thompson2019real-compressed.pdf', '_blank')">PDF 2MB</button>
+                <button class="button-main" onclick="window.open('./papers/thompson2019real.pdf', '_blank')">PDF 7MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/thompson2019real-compressed.pdf', '_blank')">PDF 3MB</button>
             </div>
           </li>
           <li>
@@ -440,7 +441,8 @@
                 <paper_title>Underwater Toolkit: Mixed Reality Object Blending for 360° Videos</paper_title><br>
                 <paper_authors>Thompson, Stephen and <b>Chalmers, Andrew</b> and Medeiros, Daniel and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>IEEE International Symposium on Mixed and Augmented Reality, 2019</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/thompson2019underwater.pdf', '_blank')">PDF 3MB</button>            </div>
+                <button class="button-main" onclick="window.open('./papers/thompson2019underwater.pdf', '_blank')">PDF 3MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/thompson2019underwater-compressed.pdf', '_blank')">PDF 2MB</button>
+            </div>
           </li>
         </ul>
 
@@ -487,7 +489,7 @@
                 <paper_title>Illumination Space: A Feature Space for Radiance Maps</paper_title><br>
                 <paper_authors><b>Chalmers, Andrew</b></paper_authors><br>
                 <paper_publisher>Phd Thesis, 2018</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/chalmers2018illumination.pdf', '_blank')">PDF 79MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chalmers2018illumination-compressed.pdf', '_blank')">PDF 15MB</button>
+                <button class="button-main" onclick="window.open('./papers/chalmers2018illumination.pdf', '_blank')">PDF 79MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chalmers2018illumination-compressed.pdf', '_blank')">PDF 18MB</button>
                 <button class="button-video" onclick="window.open('https://www.youtube.com/watch?v=ITHvP2uv1cE&ab_channel=AndrewChalmers', '_blank')">Video</button>
             </div>
           </li>
@@ -522,7 +524,7 @@
                 <paper_title>Synthesising Radiance Maps from Legacy Outdoor Photographs for Real-Time IBL on HMDs</paper_title><br>
                 <paper_authors>Ma, Wan-Duo Kurt and Iorns, Thomas and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>International Conference on Image and Vision Computing New Zealand, 2015</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/ma2015synthesising.pdf', '_blank')">PDF 5MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/ma2015synthesising-compressed.pdf', '_blank')">PDF 2MB</button>
+                <button class="button-main" onclick="window.open('./papers/ma2015synthesising.pdf', '_blank')">PDF 5MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/ma2015synthesising-compressed.pdf', '_blank')">PDF 3MB</button>
             </div>
           </li>
         </ul>
