fixed replace command

--- a/research.html
+++ b/research.html
@@ -333,7 +333,7 @@
             <div class="item-text">
                 <paper_title>Neural Screen Space Rendering of Direct Illumination</paper_title><br>
                 <paper_authors>Suppan, Christian and <b>Chalmers, Andrew</b> and Zhao, Junhong and Doronin, Alex and Rhee, Taehyun and Lee, SH and Zollmann, S and Okabe, M and Wu</paper_authors><br>
-                <paper_publisher>Pacific Graphics Short Papers, Posters, and Work-In-Progress Papers, 2021</paper_publisher><br>
+                <paper_publisher>Pacific Graphics (Short Papers), 2021</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/suppan2021neural.pdf', '_blank')">PDF 5MB</button>                <button class="button-award"">Best Conference Paper Award</button>
             </div>
           </li>
@@ -342,7 +342,7 @@
             <div class="item-text">
                 <paper_title>Art-Directing Appearance using an Environment Map Latent Space</paper_title><br>
                 <paper_authors>Petikam, Lohit and <b>Chalmers, Andrew</b> and Anjyo, Ken and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>Pacific Graphics Short Papers, Posters, and Work-In-Progress Papers, 2021</paper_publisher><br>
+                <paper_publisher>Pacific Graphics (Short Papers), 2021</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/petikam2021art.pdf', '_blank')">PDF 20MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/petikam2021art-compressed.pdf', '_blank')">PDF 3MB</button>
             </div>
           </li>
@@ -408,7 +408,7 @@
             <div class="item-text">
                 <paper_title>Illumination Space: A Feature Space for Radiance Maps</paper_title><br>
                 <paper_authors><b>Chalmers, Andrew</b> and Zickler, Todd and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>Pacific Graphics Short Papers, Posters, and Work-In-Progress Papers, 2020</paper_publisher><br>
+                <paper_publisher>Pacific Graphics (Short Papers), 2020</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/chalmers2020illumination.pdf', '_blank')">PDF 10MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chalmers2020illumination-compressed.pdf', '_blank')">PDF 3MB</button>
                 <button class="button-video" onclick="window.open('https://www.youtube.com/watch?v=ITHvP2uv1cE&ab_channel=AndrewChalmers', '_blank')">Video</button>
             </div>
