--- a/research.html
+++ b/research.html
@@ -173,7 +173,7 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li class="active"><a href="research.html"><b>Research</b></a></li>
+					<li class="active"><a href="research.html"><b>Research & Publications</b></a></li>
 				</ul>
 			</nav>
 		</header>
@@ -181,12 +181,11 @@
 		<hr style="border: none; border-top: 1px solid #333; margin: 0;">
 
 		<main>
-			<h2>Research</h2> <!-- Centered "Research" text with Roboto font -->
+			<h2>Research & Publications</h2> <!-- Centered "Research & Publications" text with Roboto font -->
 			<div class="content">
 				<!-- Add your research content here -->
 				<!-- Add any research-related images here -->
 				<img src="images/research-banner.png" alt="Research Banner" style="width: 100%;">
-				<h2>Publications</h2>
 
 <h3 style="text-align: left;">2024</h3>
         <ul>
